[package]
name = "eth-basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
ethers = { version = "0.17.0", default-features = false, features = ["legacy"] }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.21.0", features = ["full"] }
